plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.harshqa'
version = '0.0.1-SNAPSHOT'
description = 'QA dashboard AI'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // LangChain4j BOM (Bill of Materials) - Switch to 0.35.0 for stability
    implementation platform('dev.langchain4j:langchain4j-bom:0.35.0')

    // Core Spring Boot Starter (Provides the AI integration magic)
    implementation 'dev.langchain4j:langchain4j-spring-boot-starter'

    // Gemini Model Library (Instead of the specific starter)
    // The BOM will handle the version for this
    implementation 'dev.langchain4j:langchain4j-google-ai-gemini'

    // The Database (H2 - In-Memory SQL DB)
    runtimeOnly 'com.h2database:h2'

    // The Translator (Spring Data JPA)
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
}

tasks.named('test') {
    useJUnitPlatform()
}
